@@ -93,6 +93,7 @@ Additions:
    * Add elm_widget_item_part_text_custom_set(), elm_widget_item_part_text_custom_get(), elm_widget_item_part_text_custom_update(). 
    * Add "dismissed" smart callback for hover.
    * Add "dismissed" smart callback for menu.
+   * Add elm_menu_item_subitems_clear().
 
 Improvements:
 
